--- a/index.html
+++ b/index.html
@@ -2,76 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather app</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <title>Portfolio Marta Muñoz - Frontend developer</title>
+    <link rel="stylesheet" href="css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div
-        class="d-flex align-items-center justify-content-center vertical-align-vh"
-      >
-        <main class="box-app">
-          <form id="search-form">
-            <div class="d-flex justify-content-between search-box">
-              <input
-                type="text"
-                id="city-input"
-                placeholder="Search for city or place..."
-                autocomplete="off"
-              />
-              <button type="submit" class="btn btn-primary btn-search">
-                <img src="images/search.svg" alt="Search" />
-              </button>
-            </div>
-          </form>
-          <section class="content-info-weather">
-            <div class="actual-info-city">
-              <h2 id="city"></h2>
-              <p class="today-hour" id="today-hour"></p>
-              <p id="description" class="description"></p>
-              <ul class="actual-more-info">
-                <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> km/h</li>
-              </ul>
-            </div>
-            <div class="now-weather">
-              <h3 class="temperature">
-                <span id="temp-city"></span>
-                <span class="units">°C</span>
-              </h3>
-              <div class="weather-icon">
-                <img src="" alt="" id="icon" />
-              </div>
-            </div>
-          </section>
-          <section class="five-days" id="forecast"></section>
-          <footer>
-            <p class="built_by">
-              <a
-                href="https://github.com/martamd-front/weather-app"
-                target="_blank"
-                >Open-source code</a
-              >
-              by Marta Muñoz
-            </p>
-          </footer>
-        </main>
-      </div>
-    </div>
+    <h1>My portfolio</h1>
     <script src="js/script.js"></script>
   </body>
 </html>
