Changed last projects

--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
         <h1><span>{</span>Marta Muñoz<span>}</span></h1>
         <h3>Front-end developer, based in Barcelona</h3>
         <div class="navigation-links">
-          <a
-            href="/contact.html"
-            class="btn btn-primary-custom"
-            title="Contact me"
+          <a href="#contact" class="btn btn-primary-custom" title="Contact me"
             >Contact me</a
           >
         </div>
@@ -94,24 +91,24 @@
           <div class="grid-projects-img">
             <div>
               <img
-                src="images/weather.jpg"
+                src="images/dictionary.jpg"
                 class="img-fluid p-2 shadow rounded"
-                alt="Weather App screenshot"
+                alt="Dictionary App screenshot"
               />
             </div>
 
             <div>
               <img
-                src="images/time.jpg"
+                src="images/weather.jpg"
                 class="img-fluid p-2 shadow rounded"
-                alt="World clock App screenshot"
+                alt="Weather App screenshot"
               />
             </div>
             <div>
               <img
-                src="images/travel.jpg"
+                src="images/travel-ny.jpg"
                 class="img-fluid p-2 shadow rounded"
-                alt="Travel landing screenshot"
+                alt="Travel New York landing screenshot"
               />
             </div>
           </div>
