--- a/work.html
+++ b/work.html
@@ -87,6 +87,105 @@
         <div class="content-works">
           <div class="photo">
             <img
+              src="images/dictionary.jpg"
+              class="img-fluid rounded"
+              alt="Dictionary app screenshot"
+            />
+            <div class="mt-5 d-block d-md-none">
+              <a
+                href="https://dictionary-react-martamd.netlify.app/"
+                class="btn btn-secondary-custom"
+                title="Launch Dictionary app"
+                >Launch Dictionary app</a
+              >
+            </div>
+          </div>
+          <div class="text">
+            <h3 class="mb-3">Dictionary app</h3>
+            <h4>Built with React, HTML, CSS and API</h4>
+            <p>
+              Design, coding and integration of a live API for a weather app as
+              part of a SheCodes React Add-on final project.
+            </p>
+            <div class="mt-5 d-none d-md-block">
+              <a
+                href="https://dictionary-react-martamd.netlify.app/"
+                class="btn btn-secondary-custom"
+                title="Launch Dictionary app"
+                >Launch Dictionary app</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="content-works">
+          <div class="photo">
+            <img
+              src="images/weather.jpg"
+              class="img-fluid rounded"
+              alt="Weather app screenshot"
+            />
+            <div class="mt-5 d-block d-md-none">
+              <a
+                href="https://weather-react-martamd.netlify.app/"
+                class="btn btn-secondary-custom"
+                title="Launch Weather app"
+                >Launch Weather app</a
+              >
+            </div>
+          </div>
+          <div class="text">
+            <h3 class="mb-3">Weather app</h3>
+            <h4>Built with React, HTML, CSS and API</h4>
+            <p>
+              Design, coding and integration of a live API for a weather app as
+              part of a SheCodes React final project.
+            </p>
+            <div class="mt-5 d-none d-md-block">
+              <a
+                href="https://weather-react-martamd.netlify.app/"
+                class="btn btn-secondary-custom"
+                title="Launch Weather app"
+                >Launch Weather app</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="content-works">
+          <div class="photo">
+            <img
+              src="images/travel-ny.jpg"
+              class="img-fluid rounded"
+              alt="Travel to New York landing screenshot"
+            />
+            <div class="mt-5 d-block d-md-none">
+              <a
+                href="https://travel-landing-project.netlify.app/"
+                class="btn btn-secondary-custom"
+                title="Launch Travel to New York landing"
+                >Launch Travel to New York landing</a
+              >
+            </div>
+          </div>
+          <div class="text">
+            <h3 class="mb-3">Travel to New York landing</h3>
+            <h4>Built with HTML, CSS, JavaScript</h4>
+            <p>
+              Design and coding of landing page as part of a SheCodes Responsive
+              Add-on final project.
+            </p>
+            <div class="mt-5 d-none d-md-block">
+              <a
+                href="https://travel-landing-project.netlify.app/"
+                class="btn btn-secondary-custom"
+                title="Launch Travel to New York landing"
+                >Launch Travel to New York landing</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="content-works">
+          <div class="photo">
+            <img
               src="images/time.jpg"
               class="img-fluid rounded"
               alt="World Time App screenshot"
@@ -113,39 +212,6 @@
                 class="btn btn-secondary-custom"
                 title="Launch  World Time App"
                 >Launch World Time App</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="content-works">
-          <div class="photo">
-            <img
-              src="images/weather.jpg"
-              class="img-fluid rounded"
-              alt="Weather app screenshot"
-            />
-            <div class="mt-5 d-block d-md-none">
-              <a
-                href="https://www.shecodes.io/workshops/shecodes-plus-e363399a-733e-4e87-b3c6-0c0d7b8e4d25/projects/1294657"
-                class="btn btn-secondary-custom"
-                title="Launch Weather ap"
-                >Launch Weather app</a
-              >
-            </div>
-          </div>
-          <div class="text">
-            <h3 class="mb-3">Weather app</h3>
-            <h4>Built with HTML, CSS, JavaScript and API</h4>
-            <p>
-              Design, coding and integration of a live API for a weather app as
-              part of a SheCodes Plus final project.
-            </p>
-            <div class="mt-5 d-none d-md-block">
-              <a
-                href="https://www.shecodes.io/workshops/shecodes-plus-e363399a-733e-4e87-b3c6-0c0d7b8e4d25/projects/1294657"
-                class="btn btn-secondary-custom"
-                title="Launch Weather ap"
-                >Launch Weather app</a
               >
             </div>
           </div>
