--- a/work.html
+++ b/work.html
@@ -104,8 +104,8 @@
             <h3 class="mb-3">Dictionary app</h3>
             <h4>Built with React, HTML, CSS and API</h4>
             <p>
-              Design, coding and integration of a live API for a weather app as
-              part of a SheCodes React Add-on final project.
+              Design, coding and integration of a live API for a dictionary app
+              as part of a SheCodes React Add-on final project.
             </p>
             <div class="mt-5 d-none d-md-block">
               <a
