Changed text about

--- a/about.html
+++ b/about.html
@@ -87,9 +87,9 @@
               I'm currently seeking new opportunities in front-end development.
               I'm open to working on-site in Barcelona city. I also look forward
               to hearing about remote opportunities. <br /><br />
-              I'm experienced in HTML, CSS, Bootstrap, JavaScript and API
-              integration. I plan to continue learning programming languages and
-              become full-stack developer.<br /><br />
+              I'm experienced in HTML, CSS, Bootstrap, Responsive web designs,
+              React, JavaScript and API integration. I plan to continue learning
+              programming languages and become full-stack developer.<br /><br />
               I am looking forward to hear from you and to realize your project!
             </p>
             <a href="/work.html" class="btn btn-primary-custom"
